--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.8"
 matplotlib = "^3.4.3"
 numpy = "~=1.20.0"
+pandas = "1.3.4"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.11.1"
