--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install coverage codecov
+        if [ -f requirement.txt ]; then pip install -r requirements.txt; fi
     - name: Run coverage
       run: |
         coverage run -m unittest
