--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-ABDB @ file:///Users/fabian/Desktop/SABS/Antibody%20project/code/auto-db-pipeline/SAbDab-master
 arrow==1.2.1
 arxiv==1.4.2
 async-generator==1.10
 attrs==21.2.0
 beautifulsoup4==4.10.0
 bibtexparser==1.2.0
-biopython @ file:///Users/runner/miniforge3/conda-bld/biopython_1622747274970/work
 bs4==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
@@ -23,7 +21,7 @@ kiwisolver==1.3.2
 lxml==4.6.3
 matplotlib==3.4.3
 matplotlib-venn==0.11.6
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1634853077946/work
+numpy==1.21.3
 outcome==1.1.0
 packaging==21.3
 pandas==1.3.4
