--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ old_keyword_files/
 keywords/__pycache__
 keywords/.pytest_cache
 keywords/tests/__pycache__
-paperscraper/.ipynb_checkpoints/testfile-checkpoint.ipynb
+paperscraper/.ipynb_checkpoints/
+paperscraper/check_coverage.ipynb
+paperscraper/testfile.ipynb
