--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@ paperscraper/.ipynb_checkpoints/
 paperscraper/check_coverage.ipynb
 paperscraper/testfile.ipynb
 data/biorxiv_all*.jsonl
-temp.ipynb
+auto_db_pipeline/temp.ipynb
 
