--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ paperscraper/.ipynb_checkpoints/
 paperscraper/check_coverage.ipynb
 paperscraper/testfile.ipynb
 data/biorxiv_all*.jsonl
-.ent
+*.ent
