--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,12 @@ old_keyword_files/
 **/__pycache__/
 **/temp.ipynb
 
-keywords/__pycache__
+
 keywords/.pytest_cache
 keywords/tests/__pycache__
-.vscode
+**/.vscode
 paperscraper/.ipynb_checkpoints/
 paperscraper/check_coverage.ipynb
 paperscraper/testfile.ipynb
 data/biorxiv_all*.jsonl
-
-
+*.ent
