--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,5 @@ keywords/tests/__pycache__
 paperscraper/.ipynb_checkpoints/
 paperscraper/check_coverage.ipynb
 paperscraper/testfile.ipynb
-data/biorxiv_all*.jsonl
+**/biorxiv_all*.jsonl
 *.ent
