--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,6 @@ genbank/old_notebooks
 genbank/__pycache__
 genbank/elink.dtd
 **/.vscode
-paperscraper/.ipynb_checkpoints/
-paperscraper/check_coverage.ipynb
-paperscraper/testfile.ipynb
 data/biorxiv_all*.jsonl
 *.ent
-patents/search_results.json
-patents/search_results_new.json
+data/patents/patent_search_results_*.json
