biopython files removed

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ old_keyword_files/
 keywords/.pytest_cache
 keywords/tests/__pycache__
 .vscode
-genbank/elink.dtd
 **/.vscode
 data/patents/patent_search_results_*.json
 **/biorxiv_all*.jsonl
@@ -23,3 +22,4 @@ auto_db_pipeline/genbank/data
 auto_db_pipeline/genbank/old_files
 auto_db_pipeline/genbank/__pycache__
 run_genbank_pipeline.ipynb
+auto_db_pipeline/genbank/*.dtd
