--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ auto_db_pipeline/genbank/__pycache__
 run_genbank_pipeline.ipynb
 auto_db_pipeline/genbank/*.dtd
 auto_db_pipeline/genbank/pdbs/*
+
+auto_abdab.egg-info
+autoabdab.egg-info
+build
+data/pdb_files/**
